# core

./: .gitignore  .prettierignore  AGENTS.md  CHANGELOG.md  CLAUDE.md  GEMINI.md  LICENSE  README.md  TESTING_FOR_HUMANS.md  eslint.config.js  package.json  pnpm-lock.yaml  tsconfig.json  tsup.config.ts  vitest.config.ts
.github/workflows/: ci.yml  publish.yml
assets/: demo.cast
scripts/: copy-templates.mjs  demo-scenario.sh  record-demo.sh
scripts/scenarios/: _lib.sh  agent-docs.sh  call.sh  demo.sh  scaffold.sh  validate.sh
src/: index.ts
src/agent-docs/: generator.ts  index.ts  renderer.ts  types.ts
src/claudemd/: analyze.ts  generator.ts  index.ts  renderer.ts  types.ts
src/cli/: connect-options.ts  index.ts
src/client/: auth.ts  connection-manager.ts  errors.ts  index.ts  mcp-connection.ts  transports.ts  types.ts
src/scaffold/: generator.ts  index.ts  render.ts  tool-spec.ts  types.ts
src/server/: index.ts  kondukt-server.ts  params.ts  types.ts
src/validator/: index.ts  scoring.ts  types.ts  validator.ts
tests/agent-docs/: generator.test.ts  renderer.test.ts
tests/agent-docs/fixtures/py-fastapi/: README.md  pyproject.toml
tests/claudemd/: generator.test.ts  renderer.test.ts
tests/cli/: agent-docs.test.ts  call.test.ts  claudemd.test.ts  inspect.test.ts  scaffold.test.ts  serve.test.ts  test.test.ts  validate.test.ts
tests/client/: auth.test.ts  connection-manager.test.ts  errors.test.ts  mcp-connection-http.test.ts  mcp-connection-timeout.test.ts  mcp-connection.test.ts  transports.test.ts  types.test.ts
tests/server/: params.test.ts  (+3 more)
(+63 files in other folders)
